Fixed ehovering issue on mobile

--- a/src/components/skills/skills_carousel.css
+++ b/src/components/skills/skills_carousel.css
@@ -104,10 +104,6 @@
     .carousel-item:hover img {
         transform: none;
     }
-    .carousel-item:hover .tooltip {
-        opacity: 0;
-        visibility: hidden;
-    }
     .skills-carousel .carousel:hover {
         animation-play-state: running;
     }
